--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -24,9 +24,22 @@ url: "http://ka1130.github.io"
 twitter_username: ka1130
 github_username:  ka1130
 
+enable_retina: false
+permalink: :title
+nav_list:
+  Home : ['Home', '/', 'fa-home']
+  Home_Alt : ['Home Alt', '/home-alt', 'fa-home']
+  Home_Alt_2 : ['Home Alt 2', '/home-alt-2/', 'fa-home']
+  About : ['About', '/about', 'fa-anchor']
+  Contact : ['Contact', '/contact', 'fa-plane']
+  Author : ['Author', '/author/michelle', 'fa-user']
+single_footer: '<p>The writer community loves your content. Writer &copy; 2016 <a href="/">latest posts</a></p>'
+footer_links:
+    About: ['About', '/about']
+    Writer: ['Writer 2016', '/about']
+
 # Build settings
-markdown: kramdown
-theme: minima
+#markdown: kramdown
 gems:
   - jekyll-feed
 exclude:
