--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
 title: Just sudo IT
 email: ka1130@o2.pl
-description: > # this means to ignore newlines until "baseurl:"
-  Dev lines from a coding novice toiling to become a ninja.
-baseurl: "/just-sudo-it"
-url: "http://ka1130.github.io"
-twitter_username: ka1130
-github_username:  ka1130
+description: > # Writer Theme is a responsive template
+ focussed on typography, minimal design and
+  quality photography built using the Jekyll platform.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://localhost:4000" # the base hostname & protocol for your site
 enable_retina: false
 permalink: :title
 nav_list:
