--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ nav_list:
   #Home_Alt : ['Home Alt', '/home-alt', 'fa-home']
   #Home_Alt_2 : ['Home Alt 2', '/home-alt-2/', 'fa-home']
   About : ['About', '/about', 'fa-anchor']
-  Contact : ['Contact', '/contact', 'fa-plane']
+  #Contact : ['Contact', '/contact', 'fa-plane']
   Author : ['Author', '/author/kamila', 'fa-user']
-single_footer: '<p> Kamila Matla-Tomczyk &copy; 2017 <a href="/">latest posts</a></p>'
+single_footer: '<p> Kamila Matla-Tomczyk &copy; 2017 <a href="/" target="_new">latest posts</a></p>'
 footer_links:
     About: ['About', '/about']
     Kamila Matla-Tomczyk: ['&copy; 2017 Kamila Matla-Tomczyk', 'author/kamila']
